some basics are done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
 		<title>Business Casual</title>
 		<meta name="author" content="Amirmohammad Jalili">
 		<meta name="viewport" content="width=device-width, scale = 1">
-		<link rel="stylesheet" href="css/business-casual.css">
+		<link rel="stylesheet" href="css/common.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="script/jq.js"></script>
 	</head>
 	<body>
+		<header>
+			<br>
+			<h1>Business Casual</h1>
+			<p> Your address goes here</p>
+		</header>
+		<nav>
+			<a href="index.html"><span> Business Casual</span></a>
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="blog.html">BLOG</a></li>
+				<li><a href="contact.html">CONTACT</a></li>
+			</ul>
+			<button type="button" id="menu-button"><i class="fa fa-list-ul"></i></button>
+		</nav>
+		<div id="menu-panel">
+			<ul>
+				<a href="index.html"><li>HOME</li></a>
+				<a href="about.html"><li>ABOUT</li></a>
+				<a href="blog.html"><li>BLOG</li></a>
+				<a href="contact.html"><li>CONTACT</li></a>
+			</ul>
+		</div>
 	</body>
 </html>
