--- a/about.html
+++ b/about.html
@@ -1,3 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head> 
+	<head>
+		<title>Business Casual</title>
+		<meta name="author" content="Amirmohammad Jalili">
+		<meta name="viewport" content="width=device-width, scale = 1">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="OwlCarousel2-2.2.1/dist/assets/owl.carousel.min.css">
+		<link rel="stylesheet" href="OwlCarousel2-2.2.1/dist/assets/owl.theme.default.min.css">
+		<link rel="stylesheet" href="css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="OwlCarousel2-2.2.1/dist/owl.carousel.min.js"></script>
+		<script src="script/jq.js"></script>
+	</head>
+	<body>
+		<header>
+			<br>
+			<h1>Business Casual</h1>
+			<p style="color:white">Your address goes here</p>
+		</header>
+		<nav>
+			<a href="index.html"><span> Business Casual</span></a>
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a style="color:black" href="about.html">ABOUT</a></li>
+				<li><a href="blog.html">BLOG</a></li>
+				<li><a href="contact.html">CONTACT</a></li>
+			</ul>
+			<button type="button" id="menu-button"><i class="fa fa-list-ul"></i></button>
+		</nav>
+		<div id="menu-panel">
+			<ul>
+				<a href="index.html"><li>HOME</li></a>
+				<a style="color:black" href="about.html"><li>ABOUT</li></a>
+				<a href="blog.html"><li>BLOG</li></a>
+				<a href="contact.html"><li>CONTACT</li></a>
+			</ul>
+		</div>
+		<div class="cont">
+			<div class="title">
+				<hr>
+				<p>ABOUT <strong>BUSINESS CASUAL</strong></p>
+				<hr>
+			</div>
+			<p><img src="img/intro-pic.jpg" alt="image not found" align="left" style="margin:2%"></img> IPv4 comprises 4, 8-bit numbers, meaning the total of 32 bits so it can hold 2^32 or about 4.3 billion addresses. That shouldn't be enough for the users all around the world. As expected, from 2011 continents started running out of IP addresses. First to run out was asia. europe and America followed in the next couple of years. but still IPv6 only accounts for about 5% of google searches. why? Because NAT came out and solved the issue while even providing some security improvements.
+			</p>
+		</div>
+		<div class="cont">
+			<div class="title">
+				<hr>
+				<p> OUR <strong>TEAM</strong></p>
+				<hr>
+			</div>
+			<div class="image-with-cap">
+				<img src="img/anon.png" alt="image not found"></img>
+				<p> <strong>John Doe</strong> Job Title</p>
+			</div>
+			<div class="image-with-cap">
+				<img src="img/anon.png" alt="image not found"></img>
+				<p> <strong>John Doe</strong> Job Title</p>
+			</div>
+			<div class="image-with-cap">
+				<img src="img/anon.png" alt="image not found"></img>
+				<p> <strong>John Doe</strong> Job Title</p>
+			</div>
+		</div>
+		<footer>
+			<p>Copyright &#169 Your Website 2017</p>
+		</footer>
+	</body>
+</html>
+
+
+
+
+
+
+	
